--- a/example_runs/Segmentwise_knn.ipynb
+++ b/example_runs/Segmentwise_knn.ipynb
@@ -6,7 +6,7 @@
       "name": "Segmentwise_knn.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyP3GP36mo1OEo5BlqjAuQvD",
+      "authorship_tag": "ABX9TyO/zJl34GjMvJNJiB6VagJK",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -82,7 +82,8 @@
         "import numpy as np\n",
         "import pandas as pd\n",
         "\n",
-        "import scipy.io"
+        "import scipy.io\n",
+        "from tqdm.notebook import tqdm"
       ],
       "execution_count": null,
       "outputs": []
@@ -308,8 +309,8 @@
         "id": "keURe6zaaPsZ"
       },
       "source": [
-        "spectral_full_window = [ms2samples(0,20), ms2samples(400,20)]\n",
-        "neural_full_window = [ms2samples(0,20)-neural2spectral_delay, ms2samples(400,20)-neural2spectral_delay]"
+        "neural_windows = [[ms2samples(x-30) , ms2samples(x+30)] for x in range(0,360, 8)]\n",
+        "spectral_windows = [[ms2samples(x), ms2samples(x+60)] for x in range(0,360, 8)]"
       ],
       "execution_count": null,
       "outputs": []
